<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/popup_background"
    tools:context=".SettingActivity"
    android:gravity="center_horizontal">

    <ImageButton
        android:id="@+id/setting_exit"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_margin="10dp"
        android:layout_gravity="end"
        android:onClick="exitPage"
        android:background="@drawable/close"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/close" />

    <TextView
        android:id="@+id/textView_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textSize="22sp"
        android:layout_below="@id/setting_exit"/>

    <Switch
        android:id="@+id/firebase_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:switchMinWidth="56dp"
        android:layout_marginTop="10dp"
        android:text="@string/enable_crash_reports"
        android:textColor="@color/black"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:textSize="14sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textView_settings"/>

    <TextView
        android:id="@+id/textView_outputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:text="@string/output_options"
        android:textAlignment="center"
        android:textSize="22sp"
        android:layout_below="@id/firebase_switch"/>

    <RadioGroup
        android:id="@+id/output_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_below="@id/textView_outputs">
        <RadioButton
            android:id="@+id/voice_call_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option1"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/alarm_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option2" />
        <RadioButton
            android:id="@+id/music_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option3"/>
    </RadioGroup>
</RelativeLayout>