<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/header_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/fragment_padding"
            android:text="@string/usagedata"
            android:textColor="@color/white"
            android:textSize="@dimen/text_h1"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/fragment_padding"
            android:text="@string/wizard_5_text"
            android:textColor="@color/white"
            android:textSize="@dimen/text_p"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_tv" />

        <Switch
            android:id="@+id/data_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginTop="10dp"
            android:text="@string/enable_crash_reports"
            android:textColor="@color/white"
            android:textOff="@string/off"
            android:textOn="@string/on"
            android:textSize="@dimen/text_p"
            android:padding="@dimen/fragment_padding"
            app:switchPadding="12dp"
            android:layoutDirection="rtl"
            android:layout_centerHorizontal="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/p1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>