<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:elevation="10dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tile_padding">
        <TextView
            android:id="@+id/status_box_status_label_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mic_status_colon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/status_box_status_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/status_box_status_label_tv"
            android:layout_marginStart="@dimen/text_space"
            android:textStyle="bold"
            android:text="@string/connected"/>

        <TextView
            android:id="@+id/status_box_battery_level_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mic_battery"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status_box_status_label_tv" />
        <TextView
            android:id="@+id/status_box_battery_level_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/text_space"
            android:visibility="gone"
            app:layout_constraintLeft_toRightOf="@id/status_box_battery_level_label_tv"
            app:layout_constraintTop_toTopOf="@id/status_box_battery_level_label_tv"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>