<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:elevation="10dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/amplifying_control_tile_text_container"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="@dimen/tile_padding"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/amplifying_control_tile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textColor="@color/colorPrimary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <TextView
                android:id="@+id/amplifying_control_tile_status_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/amplifying_control_tile_title"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="@dimen/text_space"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/off"/>
        </LinearLayout>
        <Button
            android:id="@+id/amplifying_control_start_stop_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/start"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="@dimen/fragment_padding"
            android:layout_margin="0dp"
            android:background="@drawable/vertical_line"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>