<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ScreenSlidePageFragment">

        <ImageView
            android:id="@+id/snorkel_iv"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/fragment_padding"
            android:adjustViewBounds="true"
            android:src="@drawable/snorkel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subheader_tv" />

        <ImageView
            android:id="@+id/stanford_iv"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:adjustViewBounds="true"
            android:src="@drawable/stanford_bioengineering"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/p1_tv" />

        <TextView
            android:id="@+id/header_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/fragment_padding"
            android:text="@string/pneumask"
            android:textColor="@color/white"
            android:textSize="@dimen/text_h1"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/p1_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/fragment_padding"
            android:text="@string/wizard_1_text"
            android:textColor="@color/white"
            android:textSize="@dimen/text_p"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/snorkel_iv" />

        <TextView
            android:id="@+id/subheader_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/fragment_padding"
            android:text="@string/science_backed_reusable_ppe"
            android:textColor="@color/white"
            android:textSize="@dimen/text_h4"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_tv" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
